Fix issue with incorrect bulleting

--- a/supporters/index.html
+++ b/supporters/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html> <head> <title>Supporters | #chswx</title> <link rel="stylesheet" type="text/css" href="../inc/css/responsive-style.css" /> </head>
-<body>
+<body class="internal">
 <h1 class="main-title"><span class="city" title="Charleston Weather">#chswx</span></h1>
 <div id="wrapper">
     <h1>Supporters</h1> 
