Add supporters for Sept 2017

--- a/supporters/index.html
+++ b/supporters/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li>Kenneth Andrews</li>
         <li>Patrick L. Archibald</li>
+        <li>Matt Ayers</li>
         <li>Community Signal Podcast (Patrick O'Keefe)</li>
         <li>Stacey Finnegan</li>
         <li>Erika Greco</li>
