Add supporters for Oct/Nov 2017

--- a/supporters/index.html
+++ b/supporters/index.html
@@ -25,6 +25,27 @@
         <li>Jerry W. Smith</li>
         <li>Heather Solos-Bergman</li>
         <li>James Williams</li>
+        <li>Michele Lichtman</li>
+        <li>Dotty Bell</li>
+        <li>Bonnie Rourk</li>
+        <li>Michael Carnell</li>
+        <li>Charles Rhyne</li>
+        <li>Susan Sand</li>
+        <li>Stacey Bailey</li>
+        <li>Jennifer Hahn</li>
+        <li>Lynch</li>
+        <li>Janet Lee Nye</li>
+        <li>Charlie Patrick</li>
+        <li>Cheryl Smithem</li>
+        <li>Robert S. Lake</li>
+        <li>Lisa Moran</li>
+        <li>Bonnie Caruso</li>
+        <li>Nicholas Doyle</li>
+        <li>James Cooper</li>
+        <li>Colleen Glenn</li>
+        <li>AMan</li>
+        <li>Nina Magnesson</li>
+    </ul>
 </div>
 <div id="footer">
     <div id="footer-wrapper">
