--- a/supporters/index.html
+++ b/supporters/index.html
@@ -7,44 +7,44 @@
     <p>Thanks to your support, @chswx can continue its mission of providing hype-free, community-driven weather journalism to the people of Charleston. For a little as $2/month, you too can help keep this mission strong and thriving!</p>
     <h2>Thanks to our supporters!</h2>
     <ul>
+        <li>&quot;AMan&quot;</li>
         <li>Kenneth Andrews</li>
         <li>Patrick L. Archibald</li>
         <li>Matt Ayers</li>
+        <li>Stacey Bailey</li>
+        <li>Dotty Bell</li>
+        <li>Michael Carnell</li>
+        <li>Bonnie Caruso</li>
         <li>Community Signal Podcast (Patrick O'Keefe)</li>
+        <li>James Cooper</li>
+        <li>Nicholas Doyle</li>
         <li>Stacey Finnegan</li>
+        <li>Colleen Glenn</li>
         <li>Erika Greco</li>
+        <li>Jennifer Hahn</li>
         <li>Julia Hoffman</li>
         <li>Susan Huntington</li>
+        <li>Robert S. Lake</li>
         <li>Ryan Letellier</li>
+        <li>Michele Lichtman</li>
+        <li>&quot;Lynch&quot;</li>
         <li>The Mah Family</li>
+        <li>Nina Magnesson</li>
         <li>Clint McLean</li>
         <li>James Moffitt</li>
+        <li>Lisa Moran</li>
         <li>Mary Morelli</li>
-        <li>Tyler Reckart</li>
-        <li>Christian Senger</li>
-        <li>Jerry W. Smith</li>
-        <li>Heather Solos-Bergman</li>
-        <li>James Williams</li>
-        <li>Michele Lichtman</li>
-        <li>Dotty Bell</li>
-        <li>Bonnie Rourk</li>
-        <li>Michael Carnell</li>
-        <li>Charles Rhyne</li>
-        <li>Susan Sand</li>
-        <li>Stacey Bailey</li>
-        <li>Jennifer Hahn</li>
-        <li>Lynch</li>
         <li>Janet Lee Nye</li>
         <li>Charlie Patrick</li>
+        <li>Tyler Reckart</li>
+        <li>Charles Rhyne</li>
+        <li>Bonnie Rourk</li>
+        <li>Susan Sand</li>
+        <li>Christian Senger</li>
+        <li>Jerry W. Smith</li>
         <li>Cheryl Smithem</li>
-        <li>Robert S. Lake</li>
-        <li>Lisa Moran</li>
-        <li>Bonnie Caruso</li>
-        <li>Nicholas Doyle</li>
-        <li>James Cooper</li>
-        <li>Colleen Glenn</li>
-        <li>AMan</li>
-        <li>Nina Magnesson</li>
+        <li>Heather Solos-Bergman</li>
+        <li>James Williams</li>
     </ul>
 </div>
 <div id="footer">
