Update supporters for Oct 2018

--- a/supporters/index.html
+++ b/supporters/index.html
@@ -8,22 +8,36 @@
     <h2>Thanks to our supporters!</h2>
     <ul>
         <li>&quot;AMan&quot;</li>
+        <li>Grier Allen</li>
         <li>Kenneth Andrews</li>
         <li>Patrick L. Archibald</li>
         <li>Matt Ayers</li>
         <li>Stacey Bailey</li>
+        <li>Bonnie Rourk</li>
         <li>Dotty Bell</li>
+        <li>James Brierton</li>
+        <li>Russell Bryant</li>
         <li>Michael Carnell</li>
         <li>Bonnie Caruso</li>
+        <li>Nicholas Case</li>
         <li>Community Signal Podcast (Patrick O'Keefe)</li>
         <li>James Cooper</li>
+        <li>Shawna Courter</li>
+        <li>Death Valley Underground</li>
         <li>Nicholas Doyle</li>
+        <li>Sagid A Elhillali</li>
         <li>Stacey Finnegan</li>
         <li>Colleen Glenn</li>
         <li>Erika Greco</li>
+        <li>Matthew Gregg</li>
         <li>Jennifer Hahn</li>
+        <li>Jenni Hesterman</li>
         <li>Julia Hoffman</li>
+        <li>Sharon Hundley</li>
         <li>Susan Huntington</li>
+        <li>Jake</li>
+        <li>Deborah Johnson</li>
+        <li>David Justice</li>
         <li>Robert S. Lake</li>
         <li>Ryan Letellier</li>
         <li>Michele Lichtman</li>
@@ -31,11 +45,13 @@
         <li>The Mah Family</li>
         <li>Nina Magnesson</li>
         <li>Clint McLean</li>
+        <li>Skip McQuillin</li>
         <li>James Moffitt</li>
         <li>Lisa Moran</li>
         <li>Mary Morelli</li>
         <li>Janet Lee Nye</li>
         <li>Charlie Patrick</li>
+        <li>Matt Pipitone</li>
         <li>Tyler Reckart</li>
         <li>Charles Rhyne</li>
         <li>Bonnie Rourk</li>
