--- a/supporters/index.html
+++ b/supporters/index.html
@@ -61,6 +61,7 @@
         <li>Cheryl Smithem</li>
         <li>Heather Solos-Bergman</li>
         <li>James Williams</li>
+        <li>Geoff Yost</li>
     </ul>
 </div>
 <div id="footer">
