--- a/supporters/index.html
+++ b/supporters/index.html
@@ -23,6 +23,7 @@
         <li>Community Signal Podcast (Patrick O'Keefe)</li>
         <li>James Cooper</li>
         <li>Shawna Courter</li>
+        <li>David Crowley</li>
         <li>Death Valley Underground</li>
         <li>Nicholas Doyle</li>
         <li>Sagid A Elhillali</li>
