--- a/supporters/index.html
+++ b/supporters/index.html
@@ -23,6 +23,7 @@
         <li>Community Signal Podcast (Patrick O'Keefe)</li>
         <li>James Cooper</li>
         <li>Shawna Courter</li>
+        <li>Susan Crawford</li>
         <li>David Crowley</li>
         <li>Death Valley Underground</li>
         <li>Nicholas Doyle</li>
@@ -61,6 +62,7 @@
         <li>Jerry W. Smith</li>
         <li>Cheryl Smithem</li>
         <li>Heather Solos-Bergman</li>
+        <li>Shauna VanBogart</li>
         <li>James Williams</li>
         <li>Geoff Yost</li>
     </ul>
